clash_starlark/src/snapshots/clash_starlark__tests__starlark_error_no_main.snap
---
source: clash_starlark/src/lib.rs
expression: err
---
policy.star must define a main() function
