clash_starlark/src/snapshots/clash_starlark__tests__starlark_error_syntax.snap
---
source: clash_starlark/src/lib.rs
expression: err
---
error: Parse error: unexpected new line here, expected one of "(", ")", ",", ":" or "="
 --> test.star:2:9
  |
2 |   broken
  |         
  |
